[package]
name = "accrua-rs"
version = "0.1.0-alpha.2"
edition = "2021"
license = "Apache-2.0"
description = "An accruals calculation library"
repository = "https://github.com/Dersivative/accrua-rs"


[dependencies]
chrono = {version = "0.4", default-features = false, features = ["alloc", "std"]} 
rust_decimal = "1.24.0"
rust_decimal_macros = "1.24"